# github-archive

./: .config.example  .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  README_v4.md  backup.sh  clone.sh  github-archive.sh  justfile  local.githubArchive.plist  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml  homebrew.yml  pypi.yml  release.yml
github_archive/: __init__.py  archive.py  cli.py  constants.py  gists.py  logger.py  repos.py
githubarchive/: github_archive.py
legacy/: README.md  github-archive.sh
src/: .env.example  github-archive.py  github_archive.py  local.githubArchive.plist
test/unit/: conftest.py  test_archive.py  test_gists.py  test_github_archive.py  test_logger.py  test_repos.py
