[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-archive"
description = "A powerful tool to concurrently clone, pull, or fork user and org repos and gists to create a GitHub archive."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10, <4"
license = { text = "MIT" }
authors = [{ name = "Justintime50" }]
dependencies = ["PyGithub == 2.8.*", "woodchips == 2.*"]

[project.optional-dependencies]
dev = [
    "bandit == 1.9.*",
    "black == 25.*",
    "build == 1.3.*",
    "flake8 == 7.*",
    "isort == 7.*",
    "mypy == 1.18.*",
    "pytest == 9.*",
    "pytest-cov == 7.*",
]

[tool.setuptools.dynamic]
version = { attr = "github_archive._version.__version__" }

[project.urls]
Homepage = "http://github.com/justintime50/github-archive"

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.setuptools.package-data]
github_archive = ["py.typed"]

[project.scripts]
github-archive = "github_archive.cli:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
indent = 4
force_grid_wrap = 2
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = 2
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
disable_error_code = "import-untyped"
