[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-archive"
description = "A powerful tool to concurrently clone, pull, or fork user and org repos and gists to create a GitHub archive."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Justintime50" }]
urls = { Homepage = "http://github.com/justintime50/github-archive" }
scripts = { github-archive = "github_archive.cli:main" }
dependencies = ["PyGithub == 2.8.*", "woodchips == 2.*"]
optional-dependencies = { dev = [
    "bandit == 1.9.*",
    "build == 1.3.*",
    "mypy == 1.18.*",
    "pytest == 9.*",
    "pytest-cov == 7.*",
    "ruff == 0.14.*",
] }

[tool.setuptools.dynamic]
version = { attr = "github_archive._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["test"]

[tool.setuptools.package-data]
github_archive = ["py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "E501"]

[tool.mypy]
disable_error_code = "import-untyped"
